--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>color clock</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
-</head>
+   </head>
 
 <body>
     <div id="clock">hello world</div>
+     <script src="colorclock.js"></script>
 </body>
-
 </html>
